# python-template-rye

./: .pre-commit-config.yaml  Makefile  Readme.md  pyproject.toml
